<resources>
    <string name="app_name">Harvard Art Museums World</string>

    <string name="details_text">Details</string>
    <string name="open_web_text">Open Web</string>
    <string name="share_text">Share</string>
    <string name="search_text">Search</string>
    <string name="poster_text">Poster</string>
    <string name="exhibitions_text">Exhibitions</string>
    <string name="objects_text">Objects</string>
    <string name="search_for_text">Search For</string>
    <string name="retry_text">Retry</string>
    <string name="gallery_text">Gallery Text</string>
    <string name="provenance_text">Provenance</string>
    <string name="identification_and_creation_text">Identification and Creation</string>
    <string name="object_number_text">Object Number</string>
    <string name="title_text">Title</string>
    <string name="other_titles_text">Other Titles</string>
    <string name="classification_text">Classification</string>
    <string name="work_type_text">Work Type</string>
    <string name="date_text">Date</string>
    <string name="places_text">Places</string>
    <string name="period_text">Period</string>
    <string name="culture_text">Culture</string>
    <string name="physical_descriptions_text">Physical Descriptions</string>
    <string name="medium_text">Medium</string>
    <string name="dimensions_text">Dimensions</string>




</resources>
